--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Parmeshwar portfolio</title>
     <!--css linked-->
-    <link rel="stylesheet" href="/main.css/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
