--- a/index.html
+++ b/index.html
@@ -28,15 +28,15 @@
         </li>
     </ul>        
 </nav>
+
 <!--header-->
 <header class="hero-header">
-<div class="hero-text">
-    <h1>Hi,<br>I'am Parmeshwar</h1>
-    <h1 class=developer style="color: #4F46E5;">Web Developer</h1>
-</div>
-<div class="hero-right">
-<img src="/images/hero image.svg">
-</div>
+    <img class="hero-img" src="/images/hero image.svg">
+    <h1 class="hero-heading">Hi, I'am Parmeshwar</h1>
+    <h2 class="hero-Text"><span style="color: #4F46E5;">Web Developer</span><h2>
+</header>
+
+
 </header>
 </body>
 </html>
