linked html files

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </div>
     <ul class="nav-inline">
         <li class="nav-list-item">
-            <a class="list-items active-link" href="">Home</a>
+            <a class="list-items active-link" href="/">Home</a>
         </li>
         <li class="nav-list-item">
             <a class="list-items" href="/Projects.html">Projects</a>
