--- a/Projects.html
+++ b/Projects.html
@@ -8,7 +8,23 @@
     <link rel="stylesheet" href="/style.css">
 </head>
 <body>
-    This IS Project Section
+    <!--navigation-->
+<nav class="navigation">
+    <div class="nav-brand">
+        <div class="nav-main"><svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" viewBox="0 0 24 24" style="fill:rgba(255, 255, 255, 1);transform:;-ms-filter:"><path d="M7.375 16.781l1.25-1.562L4.601 12l4.024-3.219-1.25-1.562-5 4C2.138 11.409 2 11.696 2 12s.138.591.375.781L7.375 16.781zM16.625 7.219l-1.25 1.562L19.399 12l-4.024 3.219 1.25 1.562 5-4C21.862 12.591 22 12.304 22 12s-.138-.591-.375-.781L16.625 7.219z"></path><path transform="rotate(102.527 12 12)" d="M2.78 11H21.219V13.001H2.78z"></path></svg></div>
+    </div>
+    <ul class="nav-inline">
+        <li class="nav-list-item">
+            <a class="list-items " href="/">Home</a>
+        </li>
+        <li class="nav-list-item">
+            <a class="list-items active-link" href="/Projects.html">Projects</a>
+        </li>
+        <li class="nav-list-item">
+            <a class="list-items" href="/Blogs.html">Blogs</a>
+        </li>
+    </ul>        
+</nav>
     
 </body>
 </html>
