--- a/index.html
+++ b/index.html
@@ -34,14 +34,29 @@
     <img class="hero-img" src="/images/hero image.svg">
     <h1 class="hero-heading">Hi, I'am Parmeshwar</h1>
     <h2 class="hero-Text"><span style="color: #4F46E5;">Web Developer</span><h2>
-    <p>An en</p>
 </header>
+
 <!--button-->
 <div class="button">
     <a class="button-link" href="https://in.linkedin.com/in/parmeshwaryadav">contact</a>
 </div>
-
-
+<br>
+<!--technology section-->
+<div>
+    <h1 class="tech">
+        Technologies  I Have <span style="color: #4F46E5">Worked</span>
+    </h1>
+</div>
+<div>
+    <i class='bx bxl-html5' style='color:#1F2937' >HTML5</i>
+<div>
+<div>
+    <i class='bx bxl-css3' style='color:#1F2937' >CSS3</i>
+<div>
+<div>
+    <i class='bx bxl-javascript' style='color:#1F2937' >Javascript</i>
+<div>
+    
 </header>
 </body>
 </html>
