--- a/index.html
+++ b/index.html
@@ -41,22 +41,19 @@
     <a class="button-link" href="https://in.linkedin.com/in/parmeshwaryadav">contact</a>
 </div>
 <br>
-<!--technology section-->
-<div>
-    <h1 class="tech">
-        Technologies  I Have <span style="color: #4F46E5">Worked</span>
-    </h1>
+
+<!--skills-->
+<section class="skills-section" id=skills>
+    <h2 class="section-title">Skills</h2>
+    <p class="skills-text">These are the technologies i have worked on and made projects</p>
+<div class="skills-icons">
+   
+    <i class='bx bxl-html5' style='color:#4F46E5' ></i>
+
+    <i class='bx bxl-css3' style='color:#4F46E5' ></i>
+
+    <i class='bx bxl-javascript' style='color:#4F46E5' ></i>
 </div>
-<div>
-    <i class='bx bxl-html5' style='color:#1F2937' >HTML5</i>
-<div>
-<div>
-    <i class='bx bxl-css3' style='color:#1F2937' >CSS3</i>
-<div>
-<div>
-    <i class='bx bxl-javascript' style='color:#1F2937' >Javascript</i>
-<div>
-    
-</header>
+</section>
 </body>
 </html>
