--- a/index.html
+++ b/index.html
@@ -42,18 +42,27 @@
 </div>
 <br>
 
-<!--skills-->
-<section class="skills-section" id=skills>
+<!--skills section-->
+<section class="skills-section container">
     <h2 class="section-title">Skills</h2>
     <p class="skills-text">These are the technologies i have worked on and made projects</p>
 <div class="skills-icons">
-   
     <i class='bx bxl-html5' style='color:#4F46E5' ></i>
-
     <i class='bx bxl-css3' style='color:#4F46E5' ></i>
-
     <i class='bx bxl-javascript' style='color:#4F46E5' ></i>
+    <i class='bx bxl-nodejs' style='color:#4F46E5'  ></i>
+    <i class='bx bxl-react' style='color:#4F46E5'  ></i>
 </div>
 </section>
+<br>
+<br>
+<!--Projects section-->
+
+<section class="skills-section container">
+    <h2 class="section-title">Projects</h2>
+    <p class="skills-text">Here is Some Of my best works</p>
+</section>
+<!--footer-->
+</footer>
 </body>
 </html>
