--- a/index.html
+++ b/index.html
@@ -52,17 +52,43 @@
     <i class='bx bxl-javascript' style='color:#4F46E5' ></i>
     <i class='bx bxl-nodejs' style='color:#4F46E5'  ></i>
     <i class='bx bxl-react' style='color:#4F46E5'  ></i>
+    <i class='bx bxl-github' style='color:#4F46E5'  ></i>
 </div>
 </section>
-<br>
-<br>
+&nbsp;
 <!--Projects section-->
 
-<section class="skills-section container">
+<section class="skills-section ">
     <h2 class="section-title">Projects</h2>
-    <p class="skills-text">Here is Some Of my best works</p>
+    <p class="skills-text">Here is Some Of my best works <i class='bx bxs-heart' style='color:#fd0000' ></i></p>
+    
+</section>
+<!--project button-->
+<div class="button2">
+    <a class="button-link2" href="/Projects.html">See Projects</a>
+</div>
+&nbsp;
+<br>
+<br>
+<!--Blogs section-->
+<section class="skills-section container">
+    <h2 class="section-title">Blogs</h2>
+    <p class="skills-text">Super Intresting Blogs!!</p>
+    <div>
+
+    </div>
 </section>
 <!--footer-->
+<footer class="footer">
+    <div class="footer-text">
+        Highly Active On !
+    </div>
+<div class="footer-icons">
+       <a class="icon-links" href="https://in.linkedin.com/in/parmeshwaryadav"><i class='bx bxl-linkedin-square' style='color:#ffffff' ></i></a>
+       <a class="icon-links" href="https://github.com/parmeshwaryadav"><i class='bx bxl-github' style='color:#ffffff' ></i></a>
+       <a class="icon-links" href="https://twitter.com/parmeshwar342"><i class='bx bxl-twitter' style='color:#ffffff' ></i></a>
+       <a class="icon-links" href=""><i class='bx bxl-youtube' style='color:#ffffff' ></i></a>
+</div>
 </footer>
 </body>
 </html>
