--- a/index.html
+++ b/index.html
@@ -73,9 +73,11 @@
 <!--Blogs section-->
 <section class="skills-section container">
     <h2 class="section-title">Blogs</h2>
-    <p class="skills-text">Super Intresting Blogs!!</p>
+    <p class="skills-text">Read Super Intresting Blogs!!</p>
     <div>
-
+        <a href=""></a>
+        <a href=""></a>
+        <a href=""></a> 
     </div>
 </section>
 <!--footer-->
