--- a/index.html
+++ b/index.html
@@ -1,96 +1,109 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Parmeshwar portfolio</title>
-<!--css linked-->
+    <!--css linked-->
     <link rel="stylesheet" href="style.css">
-<!--Boxicons-->
-<link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
+    <!--Boxicons-->
+    <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
 </head>
+
 <body>
-<!--navigation-->
-<nav class="navigation">
-    <div class="nav-brand">
-        <div class="nav-main"><svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" viewBox="0 0 24 24" style="fill:rgba(255, 255, 255, 1);transform:;-ms-filter:"><path d="M7.375 16.781l1.25-1.562L4.601 12l4.024-3.219-1.25-1.562-5 4C2.138 11.409 2 11.696 2 12s.138.591.375.781L7.375 16.781zM16.625 7.219l-1.25 1.562L19.399 12l-4.024 3.219 1.25 1.562 5-4C21.862 12.591 22 12.304 22 12s-.138-.591-.375-.781L16.625 7.219z"></path><path transform="rotate(102.527 12 12)" d="M2.78 11H21.219V13.001H2.78z"></path></svg></div>
+    <!--navigation-->
+    <nav class="navigation">
+        <div class="nav-brand">
+            <div class="nav-main"><svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" viewBox="0 0 24 24"
+                    style="fill:rgba(255, 255, 255, 1);transform:;-ms-filter:">
+                    <path
+                        d="M7.375 16.781l1.25-1.562L4.601 12l4.024-3.219-1.25-1.562-5 4C2.138 11.409 2 11.696 2 12s.138.591.375.781L7.375 16.781zM16.625 7.219l-1.25 1.562L19.399 12l-4.024 3.219 1.25 1.562 5-4C21.862 12.591 22 12.304 22 12s-.138-.591-.375-.781L16.625 7.219z">
+                    </path>
+                    <path transform="rotate(102.527 12 12)" d="M2.78 11H21.219V13.001H2.78z"></path>
+                </svg></div>
+        </div>
+        <ul class="nav-inline">
+            <li class="nav-list-item">
+                <a class="list-items active-link" href="/">Home</a>
+            </li>
+            <li class="nav-list-item">
+                <a class="list-items" href="/Projects.html">Projects</a>
+            </li>
+            <li class="nav-list-item">
+                <a class="list-items" href="/Blogs.html">Blogs</a>
+            </li>
+        </ul>
+    </nav>
+
+    <!--header-->
+    <header class="hero-header">
+        <img class="hero-img" src="/images/hero image.svg">
+        <h1 class="hero-heading">Hi, I'am Parmeshwar</h1>
+        <h2 class="hero-Text"><span style="color: #4F46E5;">Web Developer</span>
+            <h2>
+    </header>
+
+    <!--button-->
+    <div class="button">
+        <a class="button-link" href="https://in.linkedin.com/in/parmeshwaryadav">contact</a>
     </div>
-    <ul class="nav-inline">
-        <li class="nav-list-item">
-            <a class="list-items active-link" href="/">Home</a>
-        </li>
-        <li class="nav-list-item">
-            <a class="list-items" href="/Projects.html">Projects</a>
-        </li>
-        <li class="nav-list-item">
-            <a class="list-items" href="/Blogs.html">Blogs</a>
-        </li>
-    </ul>        
-</nav>
+    <br>
 
-<!--header-->
-<header class="hero-header">
-    <img class="hero-img" src="/images/hero image.svg">
-    <h1 class="hero-heading">Hi, I'am Parmeshwar</h1>
-    <h2 class="hero-Text"><span style="color: #4F46E5;">Web Developer</span><h2>
-</header>
+    <!--skills section-->
+    <section class="skills-section container">
+        <h2 class="section-title">Skills</h2>
+        <p class="skills-text">These are the technologies i have worked on and made projects</p>
+        <div class="skills-icons">
+            <i class='bx bxl-html5' style='color:#4F46E5'></i>
+            <i class='bx bxl-css3' style='color:#4F46E5'></i>
+            <i class='bx bxl-javascript' style='color:#4F46E5'></i>
+            <i class='bx bxl-nodejs' style='color:#4F46E5'></i>
+            <i class='bx bxl-react' style='color:#4F46E5'></i>
+            <i class='bx bxl-github' style='color:#4F46E5'></i>
+        </div>
+    </section>
+    &nbsp;
+    <!--Projects section-->
 
-<!--button-->
-<div class="button">
-    <a class="button-link" href="https://in.linkedin.com/in/parmeshwaryadav">contact</a>
-</div>
-<br>
+    <section class="skills-section ">
+        <h2 class="section-title">Projects</h2>
+        <p class="skills-text">Here is Some Of my best works <i class='bx bxs-heart' style='color:#fd0000'></i></p>
 
-<!--skills section-->
-<section class="skills-section container">
-    <h2 class="section-title">Skills</h2>
-    <p class="skills-text">These are the technologies i have worked on and made projects</p>
-<div class="skills-icons">
-    <i class='bx bxl-html5' style='color:#4F46E5' ></i>
-    <i class='bx bxl-css3' style='color:#4F46E5' ></i>
-    <i class='bx bxl-javascript' style='color:#4F46E5' ></i>
-    <i class='bx bxl-nodejs' style='color:#4F46E5'  ></i>
-    <i class='bx bxl-react' style='color:#4F46E5'  ></i>
-    <i class='bx bxl-github' style='color:#4F46E5'  ></i>
-</div>
-</section>
-&nbsp;
-<!--Projects section-->
-
-<section class="skills-section ">
-    <h2 class="section-title">Projects</h2>
-    <p class="skills-text">Here is Some Of my best works <i class='bx bxs-heart' style='color:#fd0000' ></i></p>
-    
-</section>
-<!--project button-->
-<div class="button2">
-    <a class="button-link2" href="/Projects.html">See Projects</a>
-</div>
-&nbsp;
-<br>
-<br>
-<!--Blogs section-->
-<section class="skills-section container">
-    <h2 class="section-title">Blogs</h2>
-    <p class="skills-text">Read Super Intresting Blogs!!</p>
-    <div>
-        <a href=""></a>
-        <a href=""></a>
-        <a href=""></a> 
+    </section>
+    <!--project button-->
+    <div class="button2">
+        <a class="button-link2" href="/Projects.html">See Projects</a>
     </div>
-</section>
-<!--footer-->
-<footer class="footer">
-    <div class="footer-text">
-        Highly Active On !
-    </div>
-<div class="footer-icons">
-       <a class="icon-links" href="https://in.linkedin.com/in/parmeshwaryadav"><i class='bx bxl-linkedin-square' style='color:#ffffff' ></i></a>
-       <a class="icon-links" href="https://github.com/parmeshwaryadav"><i class='bx bxl-github' style='color:#ffffff' ></i></a>
-       <a class="icon-links" href="https://twitter.com/parmeshwar342"><i class='bx bxl-twitter' style='color:#ffffff' ></i></a>
-       <a class="icon-links" href=""><i class='bx bxl-youtube' style='color:#ffffff' ></i></a>
-</div>
-</footer>
+    &nbsp;
+    <br>
+    <br>
+    <!--Blogs section-->
+    <section class="skills-section container">
+        <h2 class="section-title">Blogs</h2>
+        <p class="skills-text">Read Super Intresting Blogs!!</p>
+        <div>
+            <a href=""></a>
+            <a href=""></a>
+            <a href=""></a>
+        </div>
+    </section>
+    <!--footer-->
+    <footer class="footer">
+        <div class="footer-text">
+            Highly Active On !
+        </div>
+        <div class="footer-icons">
+            <a class="icon-links" href="https://in.linkedin.com/in/parmeshwaryadav"><i class='bx bxl-linkedin-square'
+                    style='color:#ffffff'></i></a>
+            <a class="icon-links" href="https://github.com/parmeshwaryadav"><i class='bx bxl-github'
+                    style='color:#ffffff'></i></a>
+            <a class="icon-links" href="https://twitter.com/parmeshwar342"><i class='bx bxl-twitter'
+                    style='color:#ffffff'></i></a>
+            <a class="icon-links" href=""><i class='bx bxl-youtube' style='color:#ffffff'></i></a>
+        </div>
+    </footer>
 </body>
+
 </html>
