--- a/index.html
+++ b/index.html
@@ -83,10 +83,10 @@
     <section class="skills-section container">
         <h2 class="section-title">Blogs</h2>
         <p class="skills-text">Read Super Intresting Blogs!!</p>
-        <div>
-            <a href=""></a>
-            <a href=""></a>
-            <a href=""></a>
+        <div class="blog-icons">
+            <a href=""><i class='bx bx-code-block' style='color:#4F46E5'></i></a>
+            <a href=""><i class='bx bxs-cookie' style='color:#4F46E5'></i></a>
+            <a href=""><i class='bx bxs-smile' style='color:#4F46E5'></i></a>
         </div>
     </section>
     <!--footer-->
