--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
     <!--Blogs section-->
     <section class="skills-section container">
         <h2 class="section-title">Blogs</h2>
-        <p class="skills-text">Read Super Intresting Blogs!!</p>
+        <p class="skills-text">Read Super Interesting Blogs!!</p>
         <div class="blog-icons">
             <a href=""><i class='bx bx-code-block' style='color:#4F46E5'></i></a>
             <a href=""><i class='bx bxs-cookie' style='color:#4F46E5'></i></a>
