added blog link

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         <p class="skills-text">Read Super Interesting Blogs!!</p>
         <div class="blog-icons">
             <a href=""><i class='bx bx-code-block' style='color:#4F46E5'></i></a>
-            <a href=""><i class='bx bxs-cookie' style='color:#4F46E5'></i></a>
+            <a href="https://608412650bd95c00085c2735--parmeshwar-blogs.netlify.app/new-beginnings/"><i class='bx bxs-cookie' style='color:#4F46E5'></i></a>
             <a href=""><i class='bx bxs-smile' style='color:#4F46E5'></i></a>
         </div>
     </section>
