--- a/Projects.html
+++ b/Projects.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
     <link rel="stylesheet" href="/style.css">
+    <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
 </head>
 <body>
     <!--navigation-->
@@ -23,7 +24,26 @@
         <li class="nav-list-item">
             <a class="list-items" href="/Blogs.html">Blogs</a>
         </li>
-    </ul>        
-</nav> 
+    </ul>    
+</nav>
+<!--project header-->
+<header>
+    <section class="skills-section ">
+        <h2 class="section-title">Projects</h2>
+        <p class="skills-text">Here is Some Of my best works <i class='bx bxs-heart' style='color:#fd0000'></i></p>
+    </section>
+</header>
+&nbsp;
+
+&nbsp;
+<br>
+<br>
+<section class="skills-section container">
+    <h2 class="section-title">Skills</h2>
+    <p class="skills-text">Written blogs On topics like <b>Cookies</b>The blog site is created using gatsby</p>
+    <div class="skills-icons">
+       
+    </div>
+</section>
 </body>
 </html>
