updated project & blogs

--- a/Blogs.html
+++ b/Blogs.html
@@ -1,33 +1,94 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
+    <title>Blogs | Parmeshwar</title>
     <link rel="stylesheet" href="/style.css">
+    <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
 </head>
 <body>
-        <!--navigation-->
-<nav class="navigation">
-    <div class="nav-brand">
-        <div class="nav-main"><svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" viewBox="0 0 24 24" style="fill:rgba(255, 255, 255, 1);transform:;-ms-filter:"><path d="M7.375 16.781l1.25-1.562L4.601 12l4.024-3.219-1.25-1.562-5 4C2.138 11.409 2 11.696 2 12s.138.591.375.781L7.375 16.781zM16.625 7.219l-1.25 1.562L19.399 12l-4.024 3.219 1.25 1.562 5-4C21.862 12.591 22 12.304 22 12s-.138-.591-.375-.781L16.625 7.219z"></path><path transform="rotate(102.527 12 12)" d="M2.78 11H21.219V13.001H2.78z"></path></svg></div>
+    <!--navigation-->
+    <nav class="navigation">
+        <div class="nav-brand">
+            <div class="nav-main"></div><svg xmlns="http://www.w3.org/2000/svg" width="36" height="36"
+                viewBox="0 0 24 24" style="fill:rgba(255, 255, 255, 1);transform:;-ms-filter:">
+                <path
+                    d="M7.375 16.781l1.25-1.562L4.601 12l4.024-3.219-1.25-1.562-5 4C2.138 11.409 2 11.696 2 12s.138.591.375.781L7.375 16.781zM16.625 7.219l-1.25 1.562L19.399 12l-4.024 3.219 1.25 1.562 5-4C21.862 12.591 22 12.304 22 12s-.138-.591-.375-.781L16.625 7.219z">
+                </path>
+                <path transform="rotate(102.527 12 12)" d="M2.78 11H21.219V13.001H2.78z"></path>
+            </svg>
+        </div>
+        </div>
+        <ul class="nav-inline">
+            <li class="nav-list-item">
+                <a class="list-items" href="/">Home</a>
+            </li>
+            <li class="nav-list-item">
+                <a class="list-items" href="/Projects.html">Projects</a>
+            </li>
+            <li class="nav-list-item">
+                <a class="list-items active-link" href="/Blogs.html">Blogs</a>
+            </li>
+        </ul>
+    </nav>
+    <header class="project-header">
+        <img class="project-image" src="/images/Easter eggs_Monochromatic.svg">
+        <h1 class="project-heading">Welcome To <span style="color: #4F46E5;">| Blogs</span</h1>
+    </header>
+&nbsp;
+<!--blog section-->
+<ul class="project-ul container"> 
+    <li class="project-li">
+        <div  class="projects-list ">
+            <h2 class="list-header">5 Reasons Why You should Start Coding !<a href="https://parmeshwar-blogs.netlify.app/my-second-post/"><i class='bx bx-code-block' style='color:#4F46E5'></i></a></h2>
+            <small>April, 2021</small>
+            <p class="skills-text">coding actually does boost skills which are actually useful to most jobs.....</p>
+         <a class="view-code" href="https://parmeshwar-blogs.netlify.app/my-second-post/">Read More</a>
+        </div>
+    </li>
+</ul>
+<ul class="project-ul"> 
+    <li class="project-li">
+        <div  class="projects-list ">
+            <h2 class="list-header">Cookies<a href="https://parmeshwar-blogs.netlify.app/new-beginnings/"><i class='bx bxs-cookie' style='color:#4F46E5'></i></a></h2>
+            <small>April, 2021</small>
+            <p class="skills-text">The simple and most effective answer is to improve your web browsing experience.....</p>
+         <a class="view-code" href="https://parmeshwar-blogs.netlify.app/new-beginnings/">Read More</a>
+        </div>
+    </li>
+</ul>
+<ul class="project-ul container"> 
+    <li class="project-li">
+        <div  class="projects-list ">
+            <h2 class="list-header">How To Use emojis & icons In Your Projects !!<a href="https://parmeshwar-blogs.netlify.app/hello-world/"><i class='bx bxs-smile' style='color:#4F46E5'></i></a></h2>
+            <small>April, 2021</small>
+            <p class="skills-text">So I was Building My Portfolio Website and came across this Awesome website.....</p>
+         <a class="view-code" href="https://parmeshwar-blogs.netlify.app/hello-world/">Read More</a>
+        </div>
+    </li>
+</ul>
+<!--footer-->
+<!--footer-->
+<footer class="footer">
+    <div class="footer-text">
+        Highly Active On !
     </div>
-    <ul class="nav-inline">
-        <li class="nav-list-item">
-            <a class="list-items " href="/">Home</a>
-        </li>
-        <li class="nav-list-item">
-            <a class="list-items " href="/Projects.html">Projects</a>
-        </li>
-        <li class="nav-list-item">
-            <a class="list-items active-link" href="/Blogs.html">Blogs</a>
-        </li>
-    </ul>        
-</nav>
-    
+    <div class="footer-icons">
+        <a class="icon-links" href="https://in.linkedin.com/in/parmeshwaryadav"><i class='bx bxl-linkedin-square'
+                style='color:#ffffff'></i></a>
+        <a class="icon-links" href="https://github.com/parmeshwaryadav"><i class='bx bxl-github'
+                style='color:#ffffff'></i></a>
+        <a class="icon-links" href="https://twitter.com/parmeshwar342"><i class='bx bxl-twitter'
+                style='color:#ffffff'></i></a>
+        <a class="icon-links" href=""><i class='bx bxl-youtube' style='color:#ffffff'></i></a>
+    </div>
+    <div class="copyright">
+        &copy; Copyright 2021 Parmeshwar
+    </div>
+</footer>
 </body>
-</html>
-    
 </body>
 </html>
