--- a/index.html
+++ b/index.html
@@ -71,7 +71,6 @@
     <section class="skills-section ">
         <h2 class="section-title">Projects</h2>
         <p class="skills-text">Here is Some Of my best works <i class='bx bxs-heart' style='color:#fd0000'></i></p>
-
     </section>
     <!--project button-->
     <div class="button2">
@@ -104,7 +103,9 @@
                     style='color:#ffffff'></i></a>
             <a class="icon-links" href=""><i class='bx bxl-youtube' style='color:#ffffff'></i></a>
         </div>
+        <div class="copyright">
+            &copy; Copyright 2021 Parmeshwar
+        </div>
     </footer>
 </body>
-
 </html>
