minor fix aligned center

--- a/Projects.html
+++ b/Projects.html
@@ -55,7 +55,9 @@
             </div>
         </li>
     </ul>
+    &nbsp;
     <!--new-->
+  
     <!--footer-->
     <footer class="footer">
         <div class="footer-text">
