--- a/Blogs.html
+++ b/Blogs.html
@@ -50,27 +50,28 @@
         </div>
     </li>
 </ul>
+&nbsp;
 <ul class="project-ul"> 
     <li class="project-li">
         <div  class="projects-list ">
-            <h2 class="list-header">Cookies<a href="https://parmeshwar-blogs.netlify.app/new-beginnings/"><i class='bx bxs-cookie' style='color:#4F46E5'></i></a></h2>
+            <h2 class="list-header">Cookies<a href="https://parmeshwar-blogs.netlify.app/new-beginnings/"><i class='bx bxs-cookie' style='color:#4F46E5'></i></a>   </h2>
             <small>April, 2021</small>
-            <p class="skills-text">The simple and most effective answer is to improve your web browsing experience.....</p>
-         <a class="view-code" href="https://parmeshwar-blogs.netlify.app/new-beginnings/">Read More</a>
+            <p class="skills-text">Do Cookies Impact Your Online Privacy ?.....</p>
+         <a class="view-code" href="https://parmeshwar-blogs.netlify.app/my-second-post/">Read More</a>
         </div>
     </li>
 </ul>
+&nbsp;
 <ul class="project-ul container"> 
     <li class="project-li">
         <div  class="projects-list ">
             <h2 class="list-header">How To Use emojis & icons In Your Projects !!<a href="https://parmeshwar-blogs.netlify.app/hello-world/"><i class='bx bxs-smile' style='color:#4F46E5'></i></a></h2>
             <small>April, 2021</small>
             <p class="skills-text">So I was Building My Portfolio Website and came across this Awesome website.....</p>
-         <a class="view-code" href="https://parmeshwar-blogs.netlify.app/hello-world/">Read More</a>
+         <a class="view-code" href="https://parmeshwar-blogs.netlify.app/my-second-post/">Read More</a>
         </div>
     </li>
 </ul>
-<!--footer-->
 <!--footer-->
 <footer class="footer">
     <div class="footer-text">
