chnage blog links

--- a/Blogs.html
+++ b/Blogs.html
@@ -57,7 +57,7 @@
             <h2 class="list-header">Cookies<a href="https://parmeshwar-blogs.netlify.app/new-beginnings/"><i class='bx bxs-cookie' style='color:#4F46E5'></i></a>   </h2>
             <small>April, 2021</small>
             <p class="skills-text">Do Cookies Impact Your Online Privacy ?.....</p>
-         <a class="view-code" href="https://parmeshwar-blogs.netlify.app/my-second-post/">Read More</a>
+         <a class="view-code" href="https://parmeshwar-blogs.netlify.app/new-beginnings/">Read More</a>
         </div>
     </li>
 </ul>
@@ -68,7 +68,7 @@
             <h2 class="list-header">How To Use emojis & icons In Your Projects !!<a href="https://parmeshwar-blogs.netlify.app/hello-world/"><i class='bx bxs-smile' style='color:#4F46E5'></i></a></h2>
             <small>April, 2021</small>
             <p class="skills-text">So I was Building My Portfolio Website and came across this Awesome website.....</p>
-         <a class="view-code" href="https://parmeshwar-blogs.netlify.app/my-second-post/">Read More</a>
+         <a class="view-code" href="https://parmeshwar-blogs.netlify.app/hello-world/">Read More</a>
         </div>
     </li>
 </ul>
