changed blogs links

--- a/Blogs.html
+++ b/Blogs.html
@@ -45,7 +45,7 @@
         <div  class="projects-list ">
             <h2 class="list-header">5 Reasons Why You should Start Coding !<a href="https://parmeshwar-blogs.netlify.app/my-second-post/"><i class='bx bx-code-block' style='color:#4F46E5'></i></a></h2>
             <small>April, 2021</small>
-            <p class="skills-text">coding actually does boost skills which are actually useful to most jobs.....</p>
+            <p class="skills-text">coding actually  boost skills which are actually useful to most jobs,Problem solving</p>
          <a class="view-code" href="https://parmeshwar-blogs.netlify.app/my-second-post/">Read More</a>
         </div>
     </li>
@@ -54,13 +54,23 @@
 <ul class="project-ul"> 
     <li class="project-li">
         <div  class="projects-list ">
+            <h2 class="list-header">Cookies<a href="https://parmeshwar-blogs.netlify.app/my-second-post/"><i class='bx bx-code-block' style='color:#4F46E5'></i></a></h2>
+            <small>April, 2021</small>
+            <p class="skills-text">Have you ever came across a website & the website ask for a cookies permission !</p>
+         <a class="view-code" href="https://parmeshwar-blogs.netlify.app/new-beginnings/">Read More</a>
+        </div>
+    </li>
+</ul>
+<!-- <ul class="project-ul"> 
+    <li class="project-li">
+        <div  class="projects-list ">
             <h2 class="list-header">Cookies<a href="https://parmeshwar-blogs.netlify.app/new-beginnings/"><i class='bx bxs-cookie' style='color:#4F46E5'></i></a>   </h2>
             <small>April, 2021</small>
             <p class="skills-text">Do Cookies Impact Your Online Privacy ?.....</p>
          <a class="view-code" href="https://parmeshwar-blogs.netlify.app/new-beginnings/">Read More</a>
         </div>
     </li>
-</ul>
+</ul> -->
 &nbsp;
 <ul class="project-ul container"> 
     <li class="project-li">
@@ -72,6 +82,7 @@
         </div>
     </li>
 </ul>
+&nbsp;
 <!--footer-->
 <footer class="footer">
     <div class="footer-text">
