--- a/Blogs.html
+++ b/Blogs.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="/style.css">
     <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
 </head>
+
 <body>
     <!--navigation-->
     <nav class="navigation">
@@ -36,61 +37,71 @@
     </nav>
     <header class="project-header">
         <img class="project-image" src="/images/Easter eggs_Monochromatic.svg">
-        <h1 class="project-heading">Welcome To <span style="color: #4F46E5;">| Blogs</span</h1>
-    </header>
-&nbsp;
-<!--blog section-->
-<ul class="project-ul container"> 
-    <li class="project-li">
-        <div  class="projects-list ">
-            <h2 class="list-header">5 Reasons Why You should Start Coding !<a href="https://parmeshwar-blogs.netlify.app/my-second-post/"><i class='bx bx-code-block' style='color:#4F46E5'></i></a></h2>
-            <small>April, 2021</small>
-            <p class="skills-text">coding actually  boost skills which are actually useful to most jobs,Problem solving</p>
-         <a class="view-code" href="https://parmeshwar-blogs.netlify.app/my-second-post/">Read More</a>
-        </div>
-    </li>
-</ul>
-&nbsp;
-<ul class="project-ul"> 
-    <li class="project-li">
-        <div  class="projects-list ">
-            <h2 class="list-header">Cookies<a href="https://parmeshwar-blogs.netlify.app/my-second-post/"><i class='bx bx-code-block' style='color:#4F46E5'></i></a></h2>
-            <small>April, 2021</small>
-            <p class="skills-text">Have you ever came across a website & the website ask for a cookies permission !</p>
-         <a class="view-code" href="https://parmeshwar-blogs.netlify.app/new-beginnings/">Read More</a>
-        </div>
-    </li>
-</ul>
-&nbsp;
-<ul class="project-ul container"> 
-    <li class="project-li">
-        <div  class="projects-list ">
-            <h2 class="list-header">How To Use emojis & icons In Your Projects !!<a href="https://parmeshwar-blogs.netlify.app/hello-world/"><i class='bx bxs-smile' style='color:#4F46E5'></i></a></h2>
-            <small>April, 2021</small>
-            <p class="skills-text">So I was Building My Portfolio Website and came across this Awesome website.....</p>
-         <a class="view-code" href="https://parmeshwar-blogs.netlify.app/hello-world/">Read More</a>
-        </div>
-    </li>
-</ul>
-&nbsp;
-<!--footer-->
-<footer class="footer">
-    <div class="footer-text">
-        Highly Active On !
-    </div>
-    <div class="footer-icons">
-        <a class="icon-links" href="https://in.linkedin.com/in/parmeshwaryadav"><i class='bx bxl-linkedin-square'
-                style='color:#ffffff'></i></a>
-        <a class="icon-links" href="https://github.com/parmeshwaryadav"><i class='bx bxl-github'
-                style='color:#ffffff'></i></a>
-        <a class="icon-links" href="https://twitter.com/parmeshwar342"><i class='bx bxl-twitter'
-                style='color:#ffffff'></i></a>
-        <a class="icon-links" href=""><i class='bx bxl-youtube' style='color:#ffffff'></i></a>
-    </div>
-    <div class="copyright">
-        &copy; Copyright 2021 Parmeshwar
-    </div>
-</footer>
+        <h1 class="project-heading">Welcome To <span style="color: #4F46E5;">| Blogs</span</h1> </header> &nbsp;
+                    <!--blog section-->
+                <ul class="project-ul container">
+                    <li class="project-li">
+                        <div class="projects-list ">
+                            <h2 class="list-header">5 Reasons Why You should Start Coding !<a
+                                    href="https://parmeshwar-blogs.netlify.app/my-second-post/"><i
+                                        class='bx bx-code-block' style='color:#4F46E5'></i></a></h2>
+                            <small>April, 2021</small>
+                            <p class="skills-text">coding actually boost skills which are actually useful to most
+                                jobs,Problem solving</p>
+                            <a class="view-code" href="https://parmeshwar-blogs.netlify.app/my-second-post/">Read
+                                More</a>
+                        </div>
+                    </li>
+                </ul>
+                &nbsp;
+                <ul class="project-ul">
+                    <li class="project-li">
+                        <div class="projects-list ">
+                            <h2 class="list-header">Cookies<a
+                                    href="https://parmeshwar-blogs.netlify.app/my-second-post/"><i
+                                        class='bx bx-code-block' style='color:#4F46E5'></i></a></h2>
+                            <small>April, 2021</small>
+                            <p class="skills-text">Have you ever came across a website & the website ask for a cookies
+                                permission !</p>
+                            <a class="view-code" href="https://parmeshwar-blogs.netlify.app/new-beginnings/">Read
+                                More</a>
+                        </div>
+                    </li>
+                </ul>
+                &nbsp;
+                <ul class="project-ul container">
+                    <li class="project-li">
+                        <div class="projects-list ">
+                            <h2 class="list-header">How To Use emojis & icons In Your Projects !!<a
+                                    href="https://parmeshwar-blogs.netlify.app/hello-world/"><i class='bx bxs-smile'
+                                        style='color:#4F46E5'></i></a></h2>
+                            <small>April, 2021</small>
+                            <p class="skills-text">So I was Building My Portfolio Website and came across this Awesome
+                                website.....</p>
+                            <a class="view-code" href="https://parmeshwar-blogs.netlify.app/hello-world/">Read More</a>
+                        </div>
+                    </li>
+                </ul>
+                &nbsp;
+                <!--footer-->
+                <footer class="footer">
+                    <div class="footer-text">
+                        Highly Active On !
+                    </div>
+                    <div class="footer-icons">
+                        <a class="icon-links" href="https://in.linkedin.com/in/parmeshwaryadav"><i
+                                class='bx bxl-linkedin-square' style='color:#ffffff'></i></a>
+                        <a class="icon-links" href="https://github.com/parmeshwaryadav"><i class='bx bxl-github'
+                                style='color:#ffffff'></i></a>
+                        <a class="icon-links" href="https://twitter.com/parmeshwar342"><i class='bx bxl-twitter'
+                                style='color:#ffffff'></i></a>
+                        <a class="icon-links" href=""><i class='bx bxl-youtube' style='color:#ffffff'></i></a>
+                    </div>
+                    <div class="copyright">
+                        &copy; Copyright 2021 Parmeshwar
+                    </div>
+                </footer>
 </body>
 </body>
+
 </html>
