chnaged primary color

--- a/Blogs.html
+++ b/Blogs.html
@@ -37,14 +37,14 @@
     </nav>
     <header class="project-header">
         <img class="project-image" src="/images/Easter eggs_Monochromatic.svg">
-        <h1 class="project-heading">Welcome To <span style="color: #4F46E5;">| Blogs</span</h1> </header> &nbsp;
+        <h1 class="project-heading">Welcome To <span style="color: #4070F4;">| Blogs</span</h1> </header> &nbsp;
                     <!--blog section-->
                 <ul class="project-ul container">
                     <li class="project-li">
                         <div class="projects-list ">
                             <h2 class="list-header">5 Reasons Why You should Start Coding !<a
                                     href="https://parmeshwar-blogs.netlify.app/my-second-post/"><i
-                                        class='bx bx-code-block' style='color:#4F46E5'></i></a></h2>
+                                        class='bx bx-code-block' style='color:#4070F4'></i></a></h2>
                             <small>April, 2021</small>
                             <p class="skills-text">coding actually boost skills which are actually useful to most
                                 jobs,Problem solving</p>
@@ -59,7 +59,7 @@
                         <div class="projects-list ">
                             <h2 class="list-header">Cookies<a
                                     href="https://parmeshwar-blogs.netlify.app/my-second-post/"><i
-                                        class='bx bx-code-block' style='color:#4F46E5'></i></a></h2>
+                                        class='bx bx-code-block' style='color:#4070F4'></i></a></h2>
                             <small>April, 2021</small>
                             <p class="skills-text">Have you ever came across a website & the website ask for a cookies
                                 permission !</p>
@@ -74,7 +74,7 @@
                         <div class="projects-list ">
                             <h2 class="list-header">How To Use emojis & icons In Your Projects !!<a
                                     href="https://parmeshwar-blogs.netlify.app/hello-world/"><i class='bx bxs-smile'
-                                        style='color:#4F46E5'></i></a></h2>
+                                        style='color:#4070F4'></i></a></h2>
                             <small>April, 2021</small>
                             <p class="skills-text">So I was Building My Portfolio Website and came across this Awesome
                                 website.....</p>
