--- a/Projects.html
+++ b/Projects.html
@@ -38,14 +38,14 @@
     <!--project header-->
     <header class="project-header">
         <img class="project-image" src="/images/rocket-launch.svg">
-        <h1 class="project-heading">Welcome To <span style="color: #4F46E5;">| Projects</span</h1> </header>
+        <h1 class="project-heading">Welcome To <span style="color: #4070F4;">| Projects</span</h1> </header>
     &nbsp;
     <!--list of projects-->
     <ul class="project-ul container"> 
         <li class="project-li">
             <div  class="projects-list ">
                 <h2 class="list-header">Gatsby blog websiite<a href="https://parmeshwar-blogs.netlify.app/"><i class='bx bxs-navigation'
-                style='color:#4F46E5'></i></a></h2>
+                style='color:#4070F4'></i></a></h2>
                 <small>April, 2021</small>
                 <p class="skills-text">Created A blog Website using gatsby.</p>
 
