--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
     <!--navigation-->
     <nav class="navigation">
         <div class="nav-brand">
-            <div class="nav-main"></div><svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" viewBox="0 0 24 24"
-                    style="fill:rgba(255, 255, 255, 1);transform:;-ms-filter:">
-                    <path
-                        d="M7.375 16.781l1.25-1.562L4.601 12l4.024-3.219-1.25-1.562-5 4C2.138 11.409 2 11.696 2 12s.138.591.375.781L7.375 16.781zM16.625 7.219l-1.25 1.562L19.399 12l-4.024 3.219 1.25 1.562 5-4C21.862 12.591 22 12.304 22 12s-.138-.591-.375-.781L16.625 7.219z">
-                    </path>
-                    <path transform="rotate(102.527 12 12)" d="M2.78 11H21.219V13.001H2.78z"></path>
-                </svg>
-            </div>
+            <div class="nav-main"></div><svg xmlns="http://www.w3.org/2000/svg" width="36" height="36"
+                viewBox="0 0 24 24" style="fill:rgba(255, 255, 255, 1);transform:;-ms-filter:">
+                <path
+                    d="M7.375 16.781l1.25-1.562L4.601 12l4.024-3.219-1.25-1.562-5 4C2.138 11.409 2 11.696 2 12s.138.591.375.781L7.375 16.781zM16.625 7.219l-1.25 1.562L19.399 12l-4.024 3.219 1.25 1.562 5-4C21.862 12.591 22 12.304 22 12s-.138-.591-.375-.781L16.625 7.219z">
+                </path>
+                <path transform="rotate(102.527 12 12)" d="M2.78 11H21.219V13.001H2.78z"></path>
+            </svg>
+        </div>
         </div>
         <ul class="nav-inline">
             <li class="nav-list-item">
@@ -41,7 +41,7 @@
     <header class="hero-header">
         <img class="hero-img" src="/images/hero image.svg">
         <h1 class="hero-heading">Hi, I'am Parmeshwar</h1>
-        <h2 class="hero-Text"><span style="color: #4F46E5;">Web Developer</span>
+        <h2 class="hero-Text"><span style="color: #4070F4;">Web Developer</span>
             <h2>
     </header>
 
@@ -56,12 +56,12 @@
         <h2 class="section-title">Skills</h2>
         <p class="skills-text">These are the technologies i have worked on and made projects</p>
         <div class="skills-icons">
-            <i class='bx bxl-html5' style='color:#4F46E5'></i>
-            <i class='bx bxl-css3' style='color:#4F46E5'></i>
-            <i class='bx bxl-javascript' style='color:#4F46E5'></i>
-            <i class='bx bxl-nodejs' style='color:#4F46E5'></i>
-            <i class='bx bxl-react' style='color:#4F46E5'></i>
-            <i class='bx bxl-github' style='color:#4F46E5'></i>
+            <i class='bx bxl-html5' style='color:#4070F4'></i>
+            <i class='bx bxl-css3' style='color:#4070F4'></i>
+            <i class='bx bxl-javascript' style='color:#4070F4'></i>
+            <i class='bx bxl-nodejs' style='color:#4070F4'></i>
+            <i class='bx bxl-react' style='color:#4070F4'></i>
+            <i class='bx bxl-github' style='color:#4070F4'></i>
         </div>
     </section>
     &nbsp;
@@ -83,9 +83,9 @@
         <h2 class="section-title">Blogs</h2>
         <p class="skills-text">Read Super Interesting Blogs!!</p>
         <div class="blog-icons">
-            <a href="https://parmeshwar-blogs.netlify.app/my-second-post/"><i class='bx bx-code-block' style='color:#4F46E5'></i></a>
-            <a href="https://parmeshwar-blogs.netlify.app/new-beginnings/"><i class='bx bxs-cookie' style='color:#4F46E5'></i></a>
-            <a href="https://parmeshwar-blogs.netlify.app/hello-world/"><i class='bx bxs-smile' style='color:#4F46E5'></i></a>
+            <a href="https://parmeshwar-blogs.netlify.app/my-second-post/"><i class='bx bx-code-block' style='color:#4070F4'></i></a>
+            <a href="https://parmeshwar-blogs.netlify.app/new-beginnings/"><i class='bx bxs-cookie' style='color:#4070F4'></i></a>
+            <a href="https://parmeshwar-blogs.netlify.app/hello-world/"><i class='bx bxs-smile' style='color:#4070F4'></i></a>
         </div>
     </section>
     <!--footer-->
