--- a/Projects.html
+++ b/Projects.html
@@ -57,7 +57,36 @@
     </ul>
     &nbsp;
     <!--new-->
-  
+    <ul class="project-ul"> 
+        <li class="project-li">
+            <div  class="projects-list ">
+                <h2 class="list-header">GOT CLI Quiz App<a href="https://replit.com/@Parmeshwaryadav/GOT-Quiz-App?embed=1&output=1#index.js"><i class='bx bxs-navigation'
+                style='color:#4070F4'></i></a></h2>
+                <small>May, 2021</small>
+                <p class="skills-text">Game Of Thrones Based CLI Quiz App.</p>
+
+              <a class="view-project" href="https://replit.com/@Parmeshwaryadav/GOT-Quiz-App?embed=1&output=1#index.js">Live Project</a>
+
+             <a class="view-code" href="https://github.com/Parmeshwaryadav/GOT-Quiz-App">View Code</a>
+            </div>
+        </li>
+    </ul>
+    &nbsp;
+    <ul class="project-ul container"> 
+        <li class="project-li">
+            <div  class="projects-list ">
+                <h2 class="list-header">Minion Translation App<a href="https://replit.com/@Parmeshwaryadav/GOT-Quiz-App?embed=1&output=1#index.js"><i class='bx bxs-navigation'
+                style='color:#4070F4'></i></a></h2>
+                <small>May, 2021</small>
+                <p class="skills-text">.</p>
+
+              <a class="view-project" href="https://replit.com/@Parmeshwaryadav/GOT-Quiz-App?embed=1&output=1#index.js">Live Project</a>
+
+             <a class="view-code" href="https://github.com/Parmeshwaryadav/Minion-tranlation-app">View Code</a>
+            </div>
+        </li>
+    </ul>
+    &nbsp;
     <!--footer-->
     <footer class="footer">
         <div class="footer-text">
